--- a/packages/chrome/package.json
+++ b/packages/chrome/package.json
@@ -10,17 +10,19 @@
   },
   "scripts": {
     "dev": "vite build -w",
-    "build": "vite build"
+    "build": "vite build && node ./scripts/remove-extra-import.js"
   },
   "type": "module",
   "dependencies": {
     "solid-js": "^1.8.0",
-    "voltaire-resolver": "workspace:*"
+    "voltaire-resolver": "workspace:*",
+    "webextension-polyfill": "^0.10.0"
   },
   "devDependencies": {
     "@crxjs/vite-plugin": "2.0.0-beta.7",
     "@types/chrome": "0.0.246",
     "@types/node": "^20.8.5",
+    "@types/webextension-polyfill": "^0.10.4",
     "babel-preset-solid": "^1.8.0",
     "fs-extra": "11.1.0",
     "typescript": "^5.0.0",
