--- a/package.json
+++ b/package.json
@@ -3,5 +3,10 @@
   "private": true,
   "workspaces": [
     "packages/*"
-  ]
+  ],
+
+  "scripts": {
+    "build:resolver": "pnpm --filter voltaire-resolver run build",
+    "build:extension": "pnpm --filter voltaire-resolver-chrome run build"
+  }
 }
