--- a/packages/extension/tsconfig.json
+++ b/packages/extension/tsconfig.json
@@ -20,7 +20,7 @@
     "lib": [
       "dom",
       "dom.iterable",
-      "esnext"
+      "ESNext"
     ],
     "forceConsistentCasingInFileNames": true
   },
